--- a/student-result-analysis.ipynb
+++ b/student-result-analysis.ipynb
@@ -12,9 +12,6 @@
     "\n",
     "Instructor: Dr. Nguyen Nhat Quang\n",
     "\n",
-    "Students:\n",
-    "Vuong Huu Hung 20204564\n",
-    "\n",
     "dataset: https://www.kaggle.com/datasets/spscientist/students-performance-in-exams\n",
     "\n",
     "Algorithms: KMeans, Fuzzy C-Means\n",
@@ -11758,12 +11755,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "8a5edab282632443219e051e4ade2d1d5bbc671c781051bf1437897cbdfea0f1"
    }
   }
  },
